# robot-control-stack

./: .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  Makefile  README.md  creators.py  debian_deps.txt  docker-compose.yml  fr3.yaml  install_kinect_k4a.sh  main.cpp  pyproject.toml  requirements_dev.txt
.ci_docker/: Dockerfile
.github/workflows/: cpp.yaml  k4a.yaml  py.yaml  release.yaml  test_workflow.yaml
cmake/: FindMuJoCo.cmake  Findpinocchio.cmake  compile_scenes.cmake  download_scenes.cmake
compose/: base.yml
docker/: Dockerfile  README.md
docker/compose/: base.yml  gpu.yml  gui.yml  hw.yml
docs/: doc_requirements.txt
docs/docs_action_observation_flow/: action_obersvation_flow.md
docs/source/: conf.py  index.md  index.rst
examples/: env_cartesian_control.py  fr3.py  fr3_direct_control.py  fr3_env_cartesian_control.py  fr3_env_joint_control.py  grasp_demo.py  rpc_run_client.py  rpc_run_server.py  simple_tilburg_test.py  so101_env_cartesian_control.py  so101_env_joint_control.py  tilburg_grasp.py  ur5e_env_cartesian_control.py  ur5e_env_joint_control.py  xarm7_env_cartesian_control.py  xarm7_env_joint_control.py
examples/fr3/: fr3_direct_control.py  fr3_env_cartesian_control.py  fr3_env_joint_control.py  grasp_demo.py
examples/rpc_server_client/: rpc_run_server.py
examples/xarm7/: xarm7_env_cartesian_control.py  xarm7_env_joint_control.py
extensions/: README.md
extensions/fr3/: CMakeLists.txt  pyproject.toml
extensions/fr3/src/pybind/: CMakeLists.txt  rcs.cpp
extensions/rcs_fr3/: CMakeLists.txt  README.md  pyproject.toml
extensions/rcs_fr3/_core/hw/: __init__.pyi
extensions/rcs_fr3/cmake/: Findpinocchio.cmake
extensions/rcs_fr3/src/hw/: CMakeLists.txt  FR3.cpp  FR3.h  FrankaHand.cpp  FrankaHand.h  main.cpp
extensions/rcs_fr3/src/pybind/: CMakeLists.txt  rcs.cpp
extensions/rcs_fr3/src/rcs_fr3/: __init__.py  __main__.py  creators.py  desk.py  envs.py  utils.py
extensions/rcs_fr3/src/rcs_fr3/_core/: __init__.pyi
extensions/rcs_fr3/src/rcs_fr3/_core/hw/: __init__.pyi
extensions/rcs_panda/: CMakeLists.txt  README.md  pyproject.toml  src_fr3
extensions/rcs_panda/src/hw/: CMakeLists.txt  FR3.h  FR3MotionGenerator.h  FrankaHand.h  Panda.cpp  Panda.h  PandaMotionGenerator.cpp  PandaMotionGenerator.h  main.cpp
extensions/rcs_panda/src/pybind/: CMakeLists.txt  rcs.cpp
extensions/rcs_panda/src/rcs_panda/: __init__.py  __main__.py  creators.py  desk.py  envs.py  fr3_env_cartesian_control.py  panda_env_cartesian_control.py  panda_env_joint_control.py  utils.py
extensions/rcs_panda/src/rcs_panda/_core/hw/: __init__.pyi
extensions/rcs_realsense/: pyproject.toml
extensions/rcs_realsense/src/rcs_realsense/: calibration.py  camera.py  utils.py
extensions/rcs_robotics_library/: CMakeLists.txt  Makefile  README.md  pyproject.toml
extensions/rcs_robotics_library/src/pybind/: RL.h  rcs.cpp
extensions/rcs_robotics_library/src/rcs_robotics_library/: __init__.py
extensions/rcs_robotics_library/src/rcs_robotics_library/_core/: __init__.pyi  rl.pyi
extensions/rcs_so101/: pyproject.toml
extensions/rcs_so101/src/rcs_so101/: creators.py  env_cartesian_control.py  env_joint_control.py  hw.py
extensions/rcs_tacto/: pyproject.toml
extensions/rcs_tacto/src/rcs_tacto/: creators.py  tacto_wrapper.py
extensions/rcs_tilburg_hand/: pyproject.toml
extensions/rcs_tilburg_hand/src/rcs_tilburg_hand/: __main__.py  tilburg_hand.py  tilburg_hand_hw.py
extensions/rcs_tilburg_hand/src/rcs_tilburg_hand.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
extensions/rcs_ur5e/: pyproject.toml
extensions/rcs_ur5e/src/rcs_ur5e/: creators.py  hw.py  robotiq_gripper.py  test_gripper.py  test_robot.py  ur5e_env_cartesian_control.py  ur5e_env_joint_control.py
extensions/rcs_usb_cam/: pyproject.toml
extensions/rcs_usb_cam/src/rcs_usb_cam/: camera.py  webcam.py
extensions/rcs_xarm7/: pyproject.toml
extensions/rcs_xarm7/src/rcs_xarm7/: creators.py  env_cartesian_control.py  env_grasp.py  env_joint_control.py  hw.py  test.py  xArm7, RobotMetaConfig{.cpp
extensions/so101/: pyproject.toml
extensions/so101/src/rcs_so101/: env_joint_control.py  hw.py
include/rcs/: Camera.h  IK.h  Kinematics.h  Pose.h  Robot.h  utils.h
lerobot/: so101_new_calib.xml  teleoperate.py
models/: panda.urdf
recordings/: give.tj  give_back.tj  give_mug.tj  take_mug.tj
scripts/: home.py  lock.py  prepare.py  record.py  shutdown.py
src/: CMakeLists.txt  fr3.cpp  fr3.h  main.cpp  mirror.cpp  motion_generator.cpp  motion_generator.h
src/common/: CMakeLists.txt  Camera.h  IK.cpp  IK.h  LinearPoseTrajInterpolator.h  NRobotsWithGripper.cpp  NRobotsWithGripper.h  Pose.cpp  Pose.h  Robot.cpp  Robot.h  util.h  utils.cpp  utils.h
src/hal/: CMakeLists.txt  FR3.cpp  FR3.h  FrankaHand.cpp  FrankaHand.h  FrankaVacuum.cpp  FrankaVacuum.h  test_hal.cpp
src/hw/: CMakeLists.txt  FR3.cpp  FR3.h  FR3MotionGenerator.cpp  FR3MotionGenerator.h  FrankaHand.cpp  FrankaHand.h  FrankaVacuum.cpp  FrankaVacuum.h  MotionGenerator.cpp  MotionGenerator.h  cartesian_impedance_control.cpp  generate_elbow_motion.cpp  main.cpp  motion_generator.cpp  test_hal.cpp
src/pybind/: CMakeLists.txt  gen_mujoco_bindings.sh  mujoco_bindings.sh  pyfr3.cpp  rcs.cpp  rcsss.cpp
src/rcs/: CMakeLists.txt  IK.cpp  Kinematics.cpp  Pose.cpp
src/sim/: CMakeLists.txt  FR3.cpp  FR3.h  FrankaHand.cpp  FrankaHand.h  SimGripper.cpp  SimGripper.h  SimRobot.cpp  SimRobot.h  SimTilburgHand.cpp  SimTilburgHand.h  camera.cpp  camera.h  config.h  config.h.in  control.c  env.c  glfw_adapter.cc  glfw_adapter.h  glfw_dispatch.cc  glfw_dispatch.h  gui.cpp  gui.h  gui_client.cpp  gui_server.cpp  main.c  main.cpp  platform_ui_adapter.cc  platform_ui_adapter.h  plugin.h  plugin.h.in  renderer.cpp  renderer.h  sim.c  sim.cpp  sim.h  test.cpp  test_fr3.cpp
src/sim/ik/: CMakeLists.txt  ik.cpp  ik.h
src/sim/scenes/: CMakeLists.txt
src/sim/scenes/lab/: CMakeLists.txt
src/sim/ui/: CMakeLists.txt  glfw_adapter.cc  platform_ui_adapter.cc  ui.cpp  ui.h
(+217 files in other folders)
