[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11", "pip", "mujoco==3.1.5"]
build-backend = "scikit_build_core.build"

[project]
name = "rcsss"
version = "0.1.0"
description="Python Interface for libfranka to control the Franka Research 3 Robot"
dependencies = ["websockets>=11.0",
    "requests~=2.31",
    "numpy~=2.0",
    "typer~=0.9",
    "pydantic~=2.6",
    "gymnasium~=0.29.1",
    "pydantic_yaml~=1.3",
    "absl-py~=2.1",
    "etils[epath]>=1.7.0",
    "glfw~=2.7",
    "pyopengl",
    "pyrealsense2~=2.55.1",
    "pillow~=10.3",
# NOTE: when changing the mujoco version, also change it below in
# tool.scikit-build.cmake.define and in the Makefile
    "mujoco==3.1.5"
]
readme = "README.md"
maintainers = [
  { name = "Tobias Jülg", email = "tobias.juelg@utn.de" },
]
authors = [
  { name = "Tobias Jülg", email = "tobias.juelg@utn.de" },
  { name = "Pierre Krack", email = "pierre.krack@utn.de" },
]
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
  "Programming Language :: Python :: 3",
]

# until https://github.com/pypa/pip/issues/11440 is resolved
# we use requirements_dev.txt for linter and formatter dependencies
# [project.optional-dependencies]
# dev = [
#     "ruff==0.3.2",
#     "black==24.1.1",
#     "isort==5.13.2",
#     "mypy==1.4.1",
# ]


[tool.scikit-build]
cmake.verbose=true
logging.level = "INFO"
build-dir = "build"
wheel.packages = ["python/rcsss"]
install.components = ["python_package"]
cmake.targets = ["_core"]
# NOTE: when changing the mujoco version, also change it above in
# project.dependencies, and in the Makefile
cmake.define = { MUJOCO_VERSION = "3.1.5" }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
extend-select = [
  "B",           # flake8-bugbear
  # "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
#   "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
#   "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
  "PD",          # pandas-vet
]
ignore = [
  "PLR09",    # Too many X
  "PLR2004",  # Magic comparison
  "E741",    # ambiguous variable name
  "ICN001",  #  `numpy` should be imported as `np`
  "PGH003",  # Use specfic rule code when ignoring types issues
  # "RET504",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "C",
    "R",
    "fixme",
    "logging-fstring-interpolation",
    "unspecified-encoding",
    "broad-exception-raised",
    "broad-exception-caught"
]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
pretty = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv"
testpaths = [
    "python/tests",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "CMakeLists.txt:VERSION",
    "python/rcsss/_core/__init__.pyi:__version__",
]
