[build-system]
requires = []
build-backend = "scikit_build_core.build"

[project]
name = "rcs_fr3"
version = "0.5.0"
description="RCS libfranka integration"
dependencies = [
    # NOTE: when changing the pin version, also change it in requirements_dev.txt
    "pin==3.7.0",
]
readme = "../../README.md"
maintainers = [
  { name = "Tobias Jülg", email = "tobias.juelg@utn.de" },
]
authors = [
  { name = "Tobias Jülg", email = "tobias.juelg@utn.de" },
  { name = "Pierre Krack", email = "pierre.krack@utn.de" },
]
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"


[tool.scikit-build]
build.verbose = true
build.targets = ["_core"]
logging.level = "INFO"
build-dir = "build"
wheel.packages = ["src/rcs_fr3"]
install.components = ["python_package"]