[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rcs_tacto"
version = "0.4.0"
description="RCS integration of tacto"
dependencies = [
    "rcs==0.4.0",
    "mujoco-tacto@git+https://github.com/utn-air/mujoco-tacto.git@main"
]
readme = "README.md"
maintainers = [
  { name = "Seongjin Bien", email = "seongjin.bien@utn.de" },
]
authors = [
  { name = "Seongjin Bien", email = "seongjin.bien@utn.de" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
  "Programming Language :: Python :: 3",
]

