[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rcs_ur5e"
version = "0.4.0"
description="RCS UR5e module"
dependencies = [
    "rcs==0.4.0",
    "ur_rtde==1.6.1",
]
readme = "README.md"
maintainers = [
  { name = "Johannes Hechtl", email = "johannes.hechtl@siemens.com" },
]
authors = [
  { name = "Tobias Jülg", email = "tobias.juelg@utn.de" },
  { name = "Johannes Hechtl", email = "johannes.hechtl@siemens.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
  "Programming Language :: Python :: 3",
]

